apply plugin: 'base'
apply plugin: 'application'
apply plugin: 'java'
apply plugin: 'idea'
apply plugin: 'eclipse'

wrapper {
    gradleVersion = '6.3'
    description "Regenerates the Gradle Wrapper files"
}

sourceCompatibility = 14
compileJava {
    options.compilerArgs += ['--enable-preview']
}

run {
    jvmArgs(['--enable-preview'])
}

mainClassName = 'Java14'